# crypto_testcode

./: .gitignore  CMakeLists.txt  README.md
scripts/: linux_build_all.sh  linux_build_java.sh  windows_build_all.bat  windows_build_java.bat
tests/ApiCall/AfAlg/HashKdf/: af_alg_hash_kdf_hmac_sha256_demo.c
tests/ApiCall/AfAlg/entropy/: af_alg_entropy_rng_demo.c
tests/ApiCall/AfAlg/signature/: af_alg_signature_probe.c
tests/ApiCall/AfAlg/symmetric/: af_alg_symmetric_aes_gcm_demo.c  af_alg_symmetric_skcipher_aes_cbc_demo.c
tests/ApiCall/GnuTLS/entropy/: gnu_tls_entropy_random_demo.c
tests/ApiCall/GnuTLS/signature/: gnu_tls_signature_sign_verify_demo.c
tests/ApiCall/GnuTLS/symmetric/: gnu_tls_symmetric_aes_cbc_demo.c  gnu_tls_symmetric_aes_gcm_demo.c  gnu_tls_symmetric_aes_gcm_roundtrip_demo.c
tests/ApiCall/JavaJca/HashKdf/: JavaPBKDF2Demo.java
tests/ApiCall/JavaJca/PublicKey/: JavaRSAKeyDemo.java
tests/ApiCall/JavaJca/protocol/: java_jca_protocol_java_process_detector.cpp
tests/ApiCall/JavaJca/signature/: JavaSignatureDemo.java
tests/ApiCall/JavaJniBridge/HashKdf/: JavaTestHKDF.java
tests/ApiCall/JavaJniBridge/PublicKey/: JavaTestECDHDemo.java
tests/ApiCall/JavaJniBridge/protocol/: java_jni_bridge_protocol_complextest.c
tests/ApiCall/JavaJniBridge/signature/: JavaTestEdDSASignature.java
tests/ApiCall/JavaJniBridge/symmetric/: JavaNativeSSL.java  java_jni_bridge_symmetric_java_native_s_s_l.c
tests/ApiCall/NSS/HashKdf/: nss_hash_kdf_sha256_digest_demo.c
tests/ApiCall/NSS/PublicKey/: nss_public_key_rsa_keygen_demo.c
tests/ApiCall/NSS/entropy/: nss_entropy_random_demo.c
tests/ApiCall/NSS/protocol/: nss_protocol_tls_range_demo.c
tests/ApiCall/NSS/signature/: nss_signature_rsa_sign_verify_demo.c
tests/ApiCall/NSS/symmetric/: nss_symmetric_aes_cbc_demo.c  nss_symmetric_aes_gcm_demo.c  nss_symmetric_aes_gcm_roundtrip_demo.c
tests/ApiCall/PyCryptodome/HashKdf/: py_cryptodome_hash_kdf_pbkdf2_demo.py
tests/ApiCall/PyCryptodome/PublicKey/: py_cryptodome_public_key_rsa_kem_demo.py
tests/ApiCall/PyCryptodome/entropy/: py_cryptodome_entropy_random_bytes_demo.py
tests/ApiCall/PyCryptodome/protocol/: py_cryptodome_protocol_tls12_prf_demo.py
tests/ApiCall/PyCryptodome/symmetric/: py_cryptodome_symmetric_aes_gcm_aad_demo.py  py_cryptodome_symmetric_aes_gcm_demo.py  py_cryptodome_symmetric_run_pycryptodome_aes_gcm_aad_demo.sh  py_cryptodome_symmetric_run_pycryptodome_aes_gcm_demo.sh  py_cryptodome_symmetric_run_pycryptodome_aes_gcm_stream_demo.sh
tests/ApiCall/boringSSL/entropy/: boring_ssl_entropy_rand_demo.cc
tests/ApiCall/boringSSL/protocol/: boring_ssl_protocol_tls12_config_demo.cc
tests/ApiCall/boringSSL/signature/: boring_ssl_signature_ecdsa_sign_demo.cc
tests/ApiCall/boringSSL/symmetric/: boring_ssl_symmetric_aes_gcm_demo.cc  boring_ssl_symmetric_aes_gcm_roundtrip_demo.cc  boring_ssl_symmetric_chacha20_poly1305_demo.cc  boring_ssl_symmetric_xchacha20_poly1305_demo.cc
tests/ApiCall/cryptodev/HashKdf/: cryptodev_hash_kdf_hmac_sha256_demo.c
tests/ApiCall/cryptodev/PublicKey/: cryptodev_public_key_rsa_demo.c
tests/ApiCall/cryptodev/entropy/: cryptodev_entropy_probe.c
tests/ApiCall/cryptodev/signature/: cryptodev_signature_rsa_verify_demo.c
tests/ApiCall/cryptodev/symmetric/: cryptodev_symmetric_aes_cbc_demo.c
tests/ApiCall/libsodium/HashKdf/: libsodium_hash_kdf_pwhash_demo.c
tests/ApiCall/libsodium/PublicKey/: libsodium_public_key_box_demo.c
tests/ApiCall/libsodium/signature/: libsodium_signature_sign_demo.c
tests/ApiCall/libsodium/symmetric/: libsodium_symmetric_chacha20_poly1305_demo.c  libsodium_symmetric_secretbox_demo.c  libsodium_symmetric_xchacha20_poly1305_demo.c
tests/ApiCall/mbedTLS/HashKdf/: mbed_tls_hash_kdf_hmac_sha256_demo.c
tests/ApiCall/mbedTLS/PublicKey/: mbed_tls_public_key_ecdsa_demo.c  mbed_tls_public_key_rsa_demo.c
tests/ApiCall/mbedTLS/entropy/: mbed_tls_entropy_demo.c
tests/ApiCall/mbedTLS/symmetric/: mbed_tls_symmetric_aes_gcm_demo.c
tests/ApiCall/wolfSSL/HashKdf/: wolf_ssl_hash_kdf_hmac_sha256_demo.c
tests/ApiCall/wolfSSL/entropy/: wolf_ssl_entropy_rng_demo.c
tests/ApiCall/wolfSSL/symmetric/: wolf_ssl_symmetric_aes_cbc_demo.c  wolf_ssl_symmetric_aes_gcm_demo.c
tests/api_call/GnuTLS/entropy/: gnutls_random_demo.c
tests/api_call/GnuTLS/hash_kdf/: gnutls_pbkdf2_demo.c
tests/api_call/GnuTLS/protocol/: gnutls_priority_demo.c
tests/api_call/GnuTLS/public_key/: gnutls_rsa_keygen_demo.c
tests/api_call/GnuTLS/symmetric/: gnutls_aes_cbc_demo.c  gnutls_aes_gcm_demo.c  gnutls_aes_gcm_roundtrip_demo.c
tests/api_call/NSS/entropy/: nss_random_demo.c
tests/api_call/NSS/hash_kdf/: nss_sha256_digest_demo.c
tests/api_call/NSS/protocol/: nss_tls_range_demo.c
tests/api_call/NSS/public_key/: nss_rsa_keygen_demo.c
tests/api_call/NSS/signature/: nss_rsa_sign_verify_demo.c
tests/api_call/NSS/symmetric/: nss_aes_cbc_demo.c  nss_aes_gcm_demo.c  nss_aes_gcm_roundtrip_demo.c
tests/api_call/PyCryptodome/signature/: ecdsa_signature_demo.py
tests/api_call/PyCryptodome/symmetric/: aes_gcm_demo.py  aes_gcm_stream_demo.py  run_pycryptodome_aes_gcm_aad_demo.sh  run_pycryptodome_aes_gcm_demo.sh  run_pycryptodome_aes_gcm_stream_demo.sh
tests/api_call/af_alg/hash_kdf/: af_alg_hmac_sha256_demo.c
tests/api_call/af_alg/protocol/: af_alg_list_algorithms.c
tests/api_call/af_alg/public_key/: af_alg_akcipher_demo.c
tests/api_call/af_alg/symmetric/: af_alg_aes_gcm_demo.c  af_alg_skcipher_aes_cbc_demo.c
tests/api_call/boringSSL/hash_kdf/: boringssl_hkdf_demo.cc
tests/api_call/boringSSL/public_key/: boringssl_ecdh_demo.cc
tests/api_call/boringSSL/symmetric/: boringssl_aes_gcm_demo.cc  boringssl_aes_gcm_roundtrip_demo.cc  boringssl_chacha20_poly1305_demo.cc  (+1 more)
tests/custom_impl/: README.md
tests/custom_impl/hash_kdf/: pbkdf2_from_scratch.cpp
tests/custom_impl/public_key/: rsa_toy_implementation.cpp
tests/custom_impl/signature/: rsa_manual_signature.cpp
tests/custom_impl/symmetric/: manual_xor_cipher.cpp
tests/need_cli_input/: README.md
tests/need_gui_input/: README.md
(+37 files in other folders)
